Fixed overflow on home page

--- a/Home/homeStyles.css
+++ b/Home/homeStyles.css
@@ -1,5 +1,8 @@
 body {
     margin: 0px;
+    padding: 0px;
+    max-width: 100vw;
+    overflow: hidden;
 }
 header, header table {
     height: 75px;
